--- a/style.css
+++ b/style.css
@@ -1,5 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,400&display=swap');
+:root{
+    --primary-color:purple;
+}
 body{
     font-family: 'Montserrat', sans-serif;
+}
+hr{
+    margin: 2rem 0rem;
+}
+.container{
+    padding:0rem 1rem;
+}
+.container-center{
+    max-width: 600px;
+    margin: auto;
+}
+.link{
+    text-decoration:none ;
+    padding:0.5rem 1rem;
+}
+.link-primary{
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+    color:whitesmoke
+}
+.link-secondary{
+    background-color:var(--primary-color) ;
+    border-radius: 0.5rem;
+    border: 2px solid var(--primary-color);
+    color:whitesmoke
 
 }
+
+
+
+    
