--- a/style.css
+++ b/style.css
@@ -42,5 +42,13 @@ hr{
     text-align: right;
 }
 
+.hero{
+    padding:2rem;
+}
+.hero.hero-img{
+    max-width:350px;
+    display: block;
+    margin:auto;
+}
 
     
