--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,400&display=swap');
 :root{
     --primary-color:purple;
+    --dark-grey:#64748b
 }
 body{
     font-family: 'Montserrat', sans-serif;
@@ -46,9 +47,12 @@ hr{
     padding:2rem;
 }
 .hero.hero-img{
-    max-width:350px;
+    
     display: block;
     margin:auto;
+}
+.hero.hero-heading{
+    color:var(--dark-grey);
 }
 
     
