--- a/style.css
+++ b/style.css
@@ -54,5 +54,11 @@ hr{
 .hero.hero-heading{
     color:var(--dark-grey);
 }
-
+.footer{
+    background-color: var(--primary-color);
+    padding:2rem 1rem;
+    text-align:center;
+    color:white
+    border-top-right-radius:1rem;
+}
     
