--- a/style.css
+++ b/style.css
@@ -54,6 +54,9 @@ hr{
 .hero.hero-heading{
     color:var(--dark-grey);
 }
+.section h3{
+    text-align: center;
+}
 .footer{
     background-color: var(--primary-color);
     padding:2rem 1rem;
@@ -61,4 +64,6 @@ hr{
     color:white
     border-top-right-radius:1rem;
 }
-    
+   .footer.link{
+    color:white
+   } 
