--- a/style.css
+++ b/style.css
@@ -36,11 +36,26 @@ hr{
 .navigation{
     background-color: var(--primary-color);
     color:whitesmoke
-    padding:2rem;
+    padding:1rem;
     border-bottom-left-radius:1rem;   
+}
+.navigation.nav-brand{
+    font-weight: bold;
+}
+.nav-brand a{
+    text-decoration: none;
+    color:inherit;
+
 }
 .navigation.nav-pills{
     text-align: right;
+    margin:0.6rem 1rem;
+}
+.navigation.link{
+    color:white
+}
+.navigation.link-active{
+    font-weight: bold;
 }
 
 .hero{
