--- a/style.css
+++ b/style.css
@@ -13,29 +13,45 @@ hr{
     padding:0rem 1rem;
 }
 .container-center{
-    max-width: 600px;
+    max-width: 900px;
+    width=100%;
     margin: auto;
 }
 .link{
+    box-sizing: border-box;
     text-decoration:none ;
     padding:0.5rem 1rem;
 }
 .link-primary{
+    max-width: 140px;
+    padding:0.6rem 1.2rem;
     background-color: var(--primary-color);
-    border-radius: 0.5rem;
-    color:whitesmoke
+    margin:1rem auto;
+    border-radius: 2rem;
+    color:white
 }
 .link-secondary{
+    max-width: 140px;
+    margin: 1rem;
+    padding: 0.6rem 1.2rem;
     background-color:var(--primary-color) ;
-    border-radius: 0.5rem;
-    border: 2px solid var(--primary-color);
-    color:whitesmoke
+    border-radius: 2rem;
+    border: 1px solid var(--primary-color);
+    color:var(--primary-color);
 
+}
+.list-non-bullet{
+    list-style: none;
+    padding-inline-start: 0px;
+}
+.list-item-inline{
+    display: inline;
+    padding: 0 rem 0.5rem;
 }
 
 .navigation{
     background-color: var(--primary-color);
-    color:whitesmoke
+    color:white
     padding:1rem;
     border-bottom-left-radius:1rem;   
 }
@@ -49,7 +65,7 @@ hr{
 }
 .navigation.nav-pills{
     text-align: right;
-    margin:0.6rem 1rem;
+    margin:auto;
 }
 .navigation.link{
     color:white
@@ -60,20 +76,28 @@ hr{
 
 .hero{
     padding:2rem;
+    padding-top: 5rem;
 }
 .hero.hero-img{
-    
+    max-width:80%;
+    width:550px;
     display: block;
     margin:auto;
 }
 .hero.hero-heading{
+    text-align: center;
+    padding-top: 1rem;
     color:var(--dark-grey);
 }
+.hero.hero-heading.heading-inverted{
+    color:var(--primary color);
+}
+
 .section h3{
     text-align: center;
 }
 .footer{
-    background-color: var(--primary-color);
+    background-color: aqua;
     padding:2rem 1rem;
     text-align:center;
     color:white
@@ -81,4 +105,5 @@ hr{
 }
    .footer.link{
     color:white
+    text-align:center;
    } 
